--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:copy": "copyfiles -u 1 src/public/* src/public/**/* src/public/**/**/* dist",
     "prebuild": "npm run build:clean && npm run build:copy",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config",
+    "heroku-postbuild": "npm run build",
     "storybook": "start-storybook -p 6006 -s src/public -c src/stories",
     "build-storybook": "build-storybook"
   },
