--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@storybook/addon-knobs": "^3.1.9",
     "babel-core": "^6.23.1",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
     "babel-polyfill": "^6.23.0",
