--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@storybook/addon-knobs": "^3.1.9",
+    "aws-sdk": "^2.92.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -47,6 +48,7 @@
     "react": "^15.6.1",
     "react-document-title": "^2.0.2",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.13.3",
     "react-helmet": "^5.0.0",
     "react-router": "^3.0.2",
     "react-test-renderer": "^15.6.1",
@@ -56,7 +58,8 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
     "webpack-isomorphic-tools": "^3.0.0",
-    "webpack-md5-hash": "^0.0.5"
+    "webpack-md5-hash": "^0.0.5",
+    "xhr-mock": "^1.9.0"
   },
   "devDependencies": {
     "@storybook/react": "^3.1.9",
